--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@eslint/js": "^8.0.0",
-    "@tauri-apps/cli": "2.9.2",
+    "@tauri-apps/cli": "^2.9.2",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.0.0",
     "eslint-plugin-import": "2.31.0",
